# crosswire

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  components.json  docker-compose.yml  main.py  n8n-workflow.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  supervisor.py  webhook_server.py
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
adapters/: __init__.py  ai_transformer.py  base.py  browser_automation.py  devto.py  engine.py  hashnode.py  job_platforms.py  linkedin.py  medium.py  reddit.py  x_twitter.py
components/smoothui/animated-input/: index.tsx
components/smoothui/animated-tabs/: index.tsx
components/smoothui/expandable-cards/: index.tsx
components/smoothui/number-flow/: index.tsx
components/smoothui/product-card/: index.tsx
components/smoothui/scramble-hover/: index.tsx
components/ui/: button.tsx
config/: settings.example.json
dashboard/: app.py
dashboard/templates/: index.html
docs/: QUICKSTART.md
scripts/: README.md  backup_state.py  clean.py  deploy.sh  health_check.py  monitor.py  setup.py
tests/: test_basic.py
